@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/12/14
+	* Wand of Hermode now dispells buffs only of allies.
+	* Fixed some null pointer checks in status_change_end.
+	* Corrected a crashy Warning message. [Skotlex]
 2007/12/13
 	* Fixed possible segmentation faults in the script engine.
 	- some strings that can be freed outside the script engine were being 
